--- a/index.html
+++ b/index.html
@@ -17,26 +17,88 @@
       <h1 class="text-center">Welcome To Pioner Bank</h1>
       <div class="sumbit-area">
         <h4>Login</h4>
-        <form action="#" id="form">
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email"
-            class="form-control"
-          />
-          <input
-            type="password"
-            name="password"
-            id="password"
-            placeholder="Password"
-            class="form-control"
-          />
-        </form>
-        <button type="button" id="login-btn" class="btn btn-success">
+
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email"
+          class="form-control"
+        />
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+          class="form-control"
+        />
+        <button type="button" id="loginBtn" class="btn btn-success">
           Login
         </button>
       </div>
     </section>
+    <section id="transaction-area">
+      <div class="container ammount-area">
+        <div class="row">
+          <div class="col-md-4 col-12">
+            <div class="deposit-balance">
+              <h5>Deposit</h5>
+              <h2 id="depositMoney">
+                &dollar; <span id="current-deposit">00</span>
+              </h2>
+            </div>
+          </div>
+          <div class="col-md-4 col-12">
+            <div class="withdraw-balance">
+              <h5>Withdraw</h5>
+              <h2 id="withdrawMoney">
+                &dollar; <span id="current-withdraw">00</span>
+              </h2>
+            </div>
+          </div>
+          <div class="col-md-4 col-12">
+            <div class="main-balance">
+              <h5>Balance</h5>
+              <h2 id="balanceMoney">
+                &dollar; <span id="current-balance">1200</span>
+              </h2>
+            </div>
+          </div>
+        </div>
+        <!-- deposit place holder -->
+        <div class="container ammount-add-area">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="deposit-area">
+                <h5>Deposit</h5>
+                <input
+                  type="number"
+                  placeholder="$ amount you want to deposit"
+                  class="form-control"
+                  id="ammount-deposit"
+                />
+                <button type="button" class="btn btn-success" id="btn-deposit">
+                  Deposit
+                </button>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="withdraw-area">
+                <h5>Withdraw</h5>
+                <input
+                  type="number"
+                  placeholder="$ amount you want to withdraw"
+                  class="form-control"
+                />
+                <button type="button" class="btn btn-success" id="btn-withdraw">
+                  Withdraw
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="./js/script.js"></script>
   </body>
 </html>
