website completed but need some logic improvements

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="main-balance">
               <h5>Balance</h5>
               <h2 id="balanceMoney">
-                &dollar; <span id="current-balance">1200</span>
+                &dollar; <span id="current-balance">00</span>
               </h2>
             </div>
           </div>
@@ -75,7 +75,7 @@
                   type="number"
                   placeholder="$ amount you want to deposit"
                   class="form-control"
-                  id="ammount-deposit"
+                  id="amount-deposit"
                 />
                 <button type="button" class="btn btn-success" id="btn-deposit">
                   Deposit
@@ -89,6 +89,7 @@
                   type="number"
                   placeholder="$ amount you want to withdraw"
                   class="form-control"
+                  id="amount-withdraw"
                 />
                 <button type="button" class="btn btn-success" id="btn-withdraw">
                   Withdraw
