dont repeat your self principles added

--- a/index.html
+++ b/index.html
@@ -43,25 +43,19 @@
           <div class="col-md-4 col-12">
             <div class="deposit-balance">
               <h5>Deposit</h5>
-              <h2 id="depositMoney">
-                &dollar; <span id="current-deposit">00</span>
-              </h2>
+              <h2>&dollar; <span id="current-deposit">00</span></h2>
             </div>
           </div>
           <div class="col-md-4 col-12">
             <div class="withdraw-balance">
               <h5>Withdraw</h5>
-              <h2 id="withdrawMoney">
-                &dollar; <span id="current-withdraw">00</span>
-              </h2>
+              <h2>&dollar; <span id="current-withdraw">00</span></h2>
             </div>
           </div>
           <div class="col-md-4 col-12">
             <div class="main-balance">
               <h5>Balance</h5>
-              <h2 id="balanceMoney">
-                &dollar; <span id="current-balance">00</span>
-              </h2>
+              <h2>&dollar; <span id="current-balance">00</span></h2>
             </div>
           </div>
         </div>
@@ -103,5 +97,3 @@
     <script src="./js/script.js"></script>
   </body>
 </html>
-
-improvements
