--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="col-md-4 col-12">
             <div class="main-balance">
               <h5>Balance</h5>
-              <h2>&dollar; <span id="current-balance">00</span></h2>
+              <h2>&dollar; <span id="current-balance">1200</span></h2>
             </div>
           </div>
         </div>
@@ -97,3 +97,5 @@
     <script src="./js/script.js"></script>
   </body>
 </html>
+
+principles
